Edit to extract the correct parquet file path

--- a/notebooks/milestone1.ipynb
+++ b/notebooks/milestone1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "empty-lindsay",
+   "id": "changing-storage",
    "metadata": {},
    "source": [
     "# DSCI 525: Milestone 1\n",
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "australian-meter",
+   "id": "settled-natural",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,17 +35,17 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "pending-juvenile",
+   "id": "found-drive",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%load_ext rpy2.ipython"
+    "%load_ext rpy2.ipython"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "silver-traffic",
+   "id": "twenty-piano",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "daily-applicant",
+   "id": "cloudy-peter",
    "metadata": {},
    "source": [
     "## A) Downloading the data"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "excess-ability",
+   "id": "generous-maldives",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "statewide-requirement",
+   "id": "greater-drawing",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "posted-affiliate",
+   "id": "classified-transcription",
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "swiss-romantic",
+   "id": "apart-ability",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "funky-canada",
+   "id": "infrared-massachusetts",
    "metadata": {},
    "source": [
     "## B) Combining data CSVs"
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "arranged-logging",
+   "id": "chemical-prompt",
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "average-makeup",
+   "id": "oriented-evening",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "hidden-arabic",
+   "id": "exterior-stocks",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "spoken-saver",
+   "id": "hired-pioneer",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "quick-progress",
+   "id": "bottom-globe",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "fifth-coordination",
+   "id": "artistic-business",
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "numeric-grass",
+   "id": "arabic-texture",
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "fresh-burns",
+   "id": "useful-gamma",
    "metadata": {
     "tags": []
    },
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "floppy-truck",
+   "id": "broken-balloon",
    "metadata": {},
    "source": [
     "**Comparison in run times and memory usages on different machines**\n",
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "similar-catalyst",
+   "id": "unique-indian",
    "metadata": {},
    "source": [
     "**Comment:**\n",
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "legitimate-mobility",
+   "id": "special-scope",
    "metadata": {},
    "source": [
     "## C) Load combined CSV to memory and perform a simple EDA in Python"
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "presidential-spine",
+   "id": "frozen-secretary",
    "metadata": {},
    "source": [
     "### 1. How many records in each type of model?\n",
@@ -512,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "touched-insertion",
+   "id": "occupational-reader",
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "relevant-score",
+   "id": "eastern-amendment",
    "metadata": {},
    "source": [
     "#### 1.2. Loading in chunk "
@@ -570,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "adjusted-insertion",
+   "id": "psychological-substance",
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "vocal-lending",
+   "id": "curious-saskatchewan",
    "metadata": {},
    "source": [
     "**Comment:** (Results are computer-dependent)\n",
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "magnetic-brother",
+   "id": "associate-temperature",
    "metadata": {},
    "source": [
     "### 2. What is the average rain fall (mm/day) for the respective models\n",
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "unsigned-yemen",
+   "id": "signed-saint",
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "infinite-metabolism",
+   "id": "crucial-private",
    "metadata": {},
    "source": [
     "#### 2.2 Only load the columns that we are interested in"
@@ -700,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "dutch-heritage",
+   "id": "coated-shell",
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "congressional-thousand",
+   "id": "statutory-evolution",
    "metadata": {},
    "source": [
     "#### 2.3 Using dask"
@@ -760,7 +760,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "corporate-neighborhood",
+   "id": "handy-commission",
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "proof-vacuum",
+   "id": "hungarian-delivery",
    "metadata": {},
    "source": [
     "**Comment:** (Results are computer dependent)\n",
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "equipped-fiber",
+   "id": "major-seventh",
    "metadata": {},
    "source": [
     "## D) Transfer dataframe from Python to R and Perform a simple R EDA"
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eight-lending",
+   "id": "capital-repository",
    "metadata": {},
    "source": [
     "### 1. Comparing the different file formats created in Python in terms of file size"
@@ -840,7 +840,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "included-seventh",
+   "id": "after-school",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "minute-salad",
+   "id": "blank-coast",
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +874,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "legitimate-scottish",
+   "id": "elder-newton",
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "recorded-solid",
+   "id": "structural-commitment",
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +920,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "therapeutic-gamma",
+   "id": "fourth-agent",
    "metadata": {},
    "outputs": [
     {
@@ -945,7 +945,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unnecessary-hours",
+   "id": "piano-demand",
    "metadata": {},
    "source": [
     "### 2. Rationale for why we chose **parquet** file format to transfer dataframe from python to R:\n",
@@ -964,7 +964,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "electronic-forge",
+   "id": "premium-prescription",
    "metadata": {},
    "source": [
     "### 3. Transfer data file to R using pacquet and conduct a simple R EDA"
@@ -972,8 +972,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "wanted-flood",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filepath = glob.glob('figshareairline/combined_data.parquet/*.parquet')[0]\n",
+    "filepath"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "double-republic",
+   "id": "centered-philippines",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -982,7 +993,7 @@
     "\n",
     "# Looading the data from parquet\n",
     "library(arrow)\n",
-    "r_table <- arrow::read_parquet('figshareairline/combined_data.parquet')\n",
+    "r_table <- arrow::read_parquet(filepath)\n",
     "\n",
     "# conduct simple EDA\n",
     "\n",
@@ -1014,7 +1025,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eleven-basket",
+   "id": "elementary-brass",
    "metadata": {},
    "source": [
     "## Closing comments"
@@ -1022,7 +1033,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "handed-mission",
+   "id": "simple-uganda",
    "metadata": {},
    "source": [
     "* Given the size of this data is quite large, the time it took us to run the code is quite long.\n",
