incorporate filepath into R

--- a/notebooks/milestone1.ipynb
+++ b/notebooks/milestone1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "changing-storage",
+   "id": "handled-relaxation",
    "metadata": {},
    "source": [
     "# DSCI 525: Milestone 1\n",
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "settled-natural",
+   "id": "starting-apartment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "found-drive",
+   "id": "color-commodity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "twenty-piano",
+   "id": "noble-trouble",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cloudy-peter",
+   "id": "fifteen-abraham",
    "metadata": {},
    "source": [
     "## A) Downloading the data"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "generous-maldives",
+   "id": "fewer-wallace",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "greater-drawing",
+   "id": "abstract-jacket",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "classified-transcription",
+   "id": "urban-couple",
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "apart-ability",
+   "id": "primary-wesley",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "infrared-massachusetts",
+   "id": "insured-excess",
    "metadata": {},
    "source": [
     "## B) Combining data CSVs"
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "chemical-prompt",
+   "id": "transsexual-latter",
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "oriented-evening",
+   "id": "portable-inflation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "exterior-stocks",
+   "id": "confirmed-madrid",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "hired-pioneer",
+   "id": "perfect-science",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "bottom-globe",
+   "id": "valuable-meter",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "artistic-business",
+   "id": "later-cutting",
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "arabic-texture",
+   "id": "casual-discipline",
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "useful-gamma",
+   "id": "proof-pleasure",
    "metadata": {
     "tags": []
    },
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "broken-balloon",
+   "id": "junior-motor",
    "metadata": {},
    "source": [
     "**Comparison in run times and memory usages on different machines**\n",
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unique-indian",
+   "id": "liquid-acquisition",
    "metadata": {},
    "source": [
     "**Comment:**\n",
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "special-scope",
+   "id": "uniform-grain",
    "metadata": {},
    "source": [
     "## C) Load combined CSV to memory and perform a simple EDA in Python"
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "frozen-secretary",
+   "id": "brown-better",
    "metadata": {},
    "source": [
     "### 1. How many records in each type of model?\n",
@@ -512,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "occupational-reader",
+   "id": "boring-table",
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eastern-amendment",
+   "id": "pointed-corner",
    "metadata": {},
    "source": [
     "#### 1.2. Loading in chunk "
@@ -570,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "psychological-substance",
+   "id": "actual-glance",
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "curious-saskatchewan",
+   "id": "emotional-insight",
    "metadata": {},
    "source": [
     "**Comment:** (Results are computer-dependent)\n",
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "associate-temperature",
+   "id": "wrong-arthur",
    "metadata": {},
    "source": [
     "### 2. What is the average rain fall (mm/day) for the respective models\n",
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "signed-saint",
+   "id": "variable-passion",
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "crucial-private",
+   "id": "opponent-flower",
    "metadata": {},
    "source": [
     "#### 2.2 Only load the columns that we are interested in"
@@ -700,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "coated-shell",
+   "id": "individual-dodge",
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "statutory-evolution",
+   "id": "brief-workplace",
    "metadata": {},
    "source": [
     "#### 2.3 Using dask"
@@ -760,7 +760,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "handy-commission",
+   "id": "matched-maintenance",
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hungarian-delivery",
+   "id": "smaller-pizza",
    "metadata": {},
    "source": [
     "**Comment:** (Results are computer dependent)\n",
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "major-seventh",
+   "id": "eight-cheat",
    "metadata": {},
    "source": [
     "## D) Transfer dataframe from Python to R and Perform a simple R EDA"
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "capital-repository",
+   "id": "fixed-presence",
    "metadata": {},
    "source": [
     "### 1. Comparing the different file formats created in Python in terms of file size"
@@ -840,7 +840,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "after-school",
+   "id": "prerequisite-spencer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "blank-coast",
+   "id": "australian-venezuela",
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +874,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "elder-newton",
+   "id": "sealed-defense",
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "structural-commitment",
+   "id": "exciting-exhibit",
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +920,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "fourth-agent",
+   "id": "polyphonic-rouge",
    "metadata": {},
    "outputs": [
     {
@@ -945,7 +945,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "piano-demand",
+   "id": "spatial-basket",
    "metadata": {},
    "source": [
     "### 2. Rationale for why we chose **parquet** file format to transfer dataframe from python to R:\n",
@@ -964,7 +964,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "premium-prescription",
+   "id": "incorrect-financing",
    "metadata": {},
    "source": [
     "### 3. Transfer data file to R using pacquet and conduct a simple R EDA"
@@ -973,7 +973,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "wanted-flood",
+   "id": "narrow-paste",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -984,12 +984,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "centered-philippines",
+   "id": "official-google",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%time\n",
-    "%%R\n",
+    "%%R - i filepath\n",
     "\n",
     "# Looading the data from parquet\n",
     "library(arrow)\n",
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "elementary-brass",
+   "id": "thrown-mandate",
    "metadata": {},
    "source": [
     "## Closing comments"
@@ -1033,7 +1033,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "simple-uganda",
+   "id": "distinguished-moses",
    "metadata": {},
    "source": [
     "* Given the size of this data is quite large, the time it took us to run the code is quite long.\n",
