successfully run through the notebook

--- a/notebooks/milestone1.ipynb
+++ b/notebooks/milestone1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "every-lobby",
+   "id": "64dfb885",
    "metadata": {},
    "source": [
     "# DSCI 525: Milestone 1\n",
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "complicated-numbers",
+   "id": "1dd1fd79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,9 +35,18 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "religious-granny",
+   "id": "698737d3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\szyan\\miniconda3\\envs\\525\\lib\\site-packages\\rpy2\\robjects\\packages.py:366: UserWarning: The symbol 'quartz' is not in this R namespace/package.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext rpy2.ipython"
    ]
@@ -45,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "coastal-claim",
+   "id": "9f3d2442",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acoustic-produce",
+   "id": "1ac78828",
    "metadata": {},
    "source": [
     "## A) Downloading the data"
@@ -63,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "optical-cream",
+   "id": "c6e029af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "dedicated-vietnamese",
+   "id": "3a2550f8",
    "metadata": {},
    "outputs": [
     {
@@ -134,14 +143,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "instrumental-experience",
+   "id": "210d7e63",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 12min 10s\n"
+      "Wall time: 39.4 s\n"
      ]
     }
    ],
@@ -157,14 +166,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "silent-cleveland",
+   "id": "f77be79a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 22.5 s\n"
+      "Wall time: 13.6 s\n"
      ]
     }
    ],
@@ -176,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "average-picking",
+   "id": "2c6b7cf4",
    "metadata": {},
    "source": [
     "## B) Combining data CSVs"
@@ -184,8 +193,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "retired-trinidad",
+   "execution_count": 8,
+   "id": "6016fbe9",
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +231,7 @@
        " 'figshareairline\\\\TaiESM1_daily_rainfall_NSW.csv']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,8 +244,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "stuffed-control",
+   "execution_count": 9,
+   "id": "cfd417ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,8 +259,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "discrete-seven",
+   "execution_count": 10,
+   "id": "f1ca36b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,16 +274,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "numerous-america",
+   "execution_count": 11,
+   "id": "d293991e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 93.20 MiB, increment: 0.26 MiB\n",
-      "Wall time: 8min 16s\n"
+      "peak memory: 136.10 MiB, increment: 0.23 MiB\n",
+      "Wall time: 6min 3s\n"
      ]
     }
    ],
@@ -292,8 +301,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "charged-february",
+   "execution_count": 12,
+   "id": "fdb44c80",
    "metadata": {},
    "outputs": [
     {
@@ -311,15 +320,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "strategic-discrimination",
+   "execution_count": 13,
+   "id": "4ffe6860",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 1min 50s\n"
+      "Wall time: 56.6 s\n"
      ]
     }
    ],
@@ -330,8 +339,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "unexpected-biotechnology",
+   "execution_count": 14,
+   "id": "ffd6ad56",
    "metadata": {},
    "outputs": [
     {
@@ -348,8 +357,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "dying-particle",
+   "execution_count": 15,
+   "id": "73ac6ae8",
    "metadata": {
     "tags": []
    },
@@ -455,7 +464,7 @@
        "4  ACCESS-CM2  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +475,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "general-sword",
+   "id": "402d9b2d",
    "metadata": {},
    "source": [
     "**Comparison in run times and memory usages on different machines**\n",
@@ -482,7 +491,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "suspended-reality",
+   "id": "f9c17749",
    "metadata": {},
    "source": [
     "**Comment:**\n",
@@ -494,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "roman-allowance",
+   "id": "5fc0765b",
    "metadata": {},
    "source": [
     "## C) Load combined CSV to memory and perform a simple EDA in Python"
@@ -502,7 +511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "wanted-generation",
+   "id": "f1c1d3c0",
    "metadata": {},
    "source": [
     "### 1. How many records in each type of model?\n",
@@ -511,8 +520,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "available-metabolism",
+   "execution_count": 16,
+   "id": "16c602ad",
    "metadata": {},
    "outputs": [
     {
@@ -522,33 +531,33 @@
       "MPI-ESM1-2-HR       5154240\n",
       "CMCC-CM2-SR5        3541230\n",
       "CMCC-ESM2           3541230\n",
-      "TaiESM1             3541230\n",
-      "NorESM2-MM          3541230\n",
       "CMCC-CM2-HR4        3541230\n",
+      "NorESM2-MM          3541230\n",
+      "TaiESM1             3541230\n",
       "SAM0-UNICON         3541153\n",
       "FGOALS-f3-L         3219300\n",
-      "GFDL-CM4            3219300\n",
       "GFDL-ESM4           3219300\n",
-      "MRI-ESM2-0          3037320\n",
+      "GFDL-CM4            3219300\n",
       "EC-Earth3-Veg-LR    3037320\n",
+      "MRI-ESM2-0          3037320\n",
       "BCC-CSM2-MR         3035340\n",
       "MIROC6              2070900\n",
       "ACCESS-CM2          1932840\n",
       "ACCESS-ESM1-5       1610700\n",
-      "INM-CM5-0           1609650\n",
       "INM-CM4-8           1609650\n",
-      "FGOALS-g3           1287720\n",
+      "INM-CM5-0           1609650\n",
       "KIOST-ESM           1287720\n",
+      "FGOALS-g3           1287720\n",
+      "MPI-ESM-1-2-HAM      966420\n",
       "AWI-ESM-1-1-LR       966420\n",
       "MPI-ESM1-2-LR        966420\n",
       "NESM3                966420\n",
-      "MPI-ESM-1-2-HAM      966420\n",
       "NorESM2-LM           919800\n",
-      "CanESM5              551880\n",
       "BCC-ESM1             551880\n",
+      "CanESM5              551880\n",
       "Name: model, dtype: int64\n",
-      "peak memory: 4166.52 MiB, increment: 1347.64 MiB\n",
-      "Wall time: 2min 4s\n"
+      "peak memory: 11795.62 MiB, increment: 6671.00 MiB\n",
+      "Wall time: 55.7 s\n"
      ]
     }
    ],
@@ -561,7 +570,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "interpreted-kingdom",
+   "id": "0cf52458",
    "metadata": {},
    "source": [
     "#### 1.2. Loading in chunk "
@@ -569,8 +578,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "after-collect",
+   "execution_count": 17,
+   "id": "42206bb1",
    "metadata": {},
    "outputs": [
     {
@@ -605,8 +614,8 @@
       "SAM0-UNICON         3541153\n",
       "TaiESM1             3541230\n",
       "dtype: int32\n",
-      "peak memory: 3163.61 MiB, increment: 2030.70 MiB\n",
-      "Wall time: 1min 13s\n"
+      "peak memory: 9741.21 MiB, increment: 2161.39 MiB\n",
+      "Wall time: 55.1 s\n"
      ]
     }
    ],
@@ -621,7 +630,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "portuguese-atlas",
+   "id": "dd589ce5",
    "metadata": {},
    "source": [
     "**Comment:** (Results are computer-dependent)\n",
@@ -631,7 +640,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cardiovascular-earth",
+   "id": "de0011a2",
    "metadata": {},
    "source": [
     "### 2. What is the average rain fall (mm/day) for the respective models\n",
@@ -640,8 +649,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "timely-stadium",
+   "execution_count": 18,
+   "id": "9329adc9",
    "metadata": {},
    "outputs": [
     {
@@ -677,8 +686,8 @@
       "SAM0-UNICON         2.169676\n",
       "TaiESM1             2.224576\n",
       "Name: rain (mm/day), dtype: float64\n",
-      "peak memory: 5179.16 MiB, increment: 4245.08 MiB\n",
-      "Wall time: 2min 23s\n"
+      "peak memory: 12302.26 MiB, increment: 4505.66 MiB\n",
+      "Wall time: 1min\n"
      ]
     }
    ],
@@ -691,7 +700,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hazardous-friendship",
+   "id": "a7b8f8fa",
    "metadata": {},
    "source": [
     "#### 2.2 Only load the columns that we are interested in"
@@ -699,8 +708,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "settled-scope",
+   "execution_count": 19,
+   "id": "e517743a",
    "metadata": {},
    "outputs": [
     {
@@ -736,8 +745,8 @@
       "SAM0-UNICON         2.169676\n",
       "TaiESM1             2.224576\n",
       "Name: rain (mm/day), dtype: float64\n",
-      "peak memory: 4274.40 MiB, increment: 855.27 MiB\n",
-      "Wall time: 50.9 s\n"
+      "peak memory: 7220.52 MiB, increment: 1909.54 MiB\n",
+      "Wall time: 35 s\n"
      ]
     }
    ],
@@ -751,7 +760,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "stretch-shadow",
+   "id": "efb60b2d",
    "metadata": {},
    "source": [
     "#### 2.3 Using dask"
@@ -759,8 +768,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "handed-summer",
+   "execution_count": 20,
+   "id": "a1a2f961",
    "metadata": {},
    "outputs": [
     {
@@ -796,8 +805,8 @@
       "SAM0-UNICON         2.169676\n",
       "TaiESM1             2.224576\n",
       "Name: rain (mm/day), dtype: float64\n",
-      "peak memory: 2558.66 MiB, increment: 1532.67 MiB\n",
-      "Wall time: 47.7 s\n"
+      "peak memory: 3658.82 MiB, increment: 2427.56 MiB\n",
+      "Wall time: 35.7 s\n"
      ]
     }
    ],
@@ -812,7 +821,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "palestinian-softball",
+   "id": "500def82",
    "metadata": {},
    "source": [
     "**Comment:** (Results are computer dependent)\n",
@@ -823,7 +832,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "postal-suspect",
+   "id": "7e97fad9",
    "metadata": {},
    "source": [
     "## D) Transfer dataframe from Python to R and Perform a simple R EDA"
@@ -831,7 +840,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "centered-maximum",
+   "id": "03ca911b",
    "metadata": {},
    "source": [
     "### 1. Comparing the different file formats created in Python in terms of file size"
@@ -839,8 +848,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "bacterial-membership",
+   "execution_count": 21,
+   "id": "07ab4a8b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -849,16 +858,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "imported-transfer",
+   "execution_count": 22,
+   "id": "b995a717",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 2907.09 MiB, increment: 2838.77 MiB\n",
-      "Wall time: 33.6 s\n"
+      "peak memory: 5130.21 MiB, increment: 3878.97 MiB\n",
+      "Wall time: 23.4 s\n"
      ]
     }
    ],
@@ -873,16 +882,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "latin-graph",
+   "execution_count": 23,
+   "id": "120441ae",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 3673.01 MiB, increment: 828.54 MiB\n",
-      "Wall time: 10.2 s\n"
+      "peak memory: 5152.63 MiB, increment: 22.42 MiB\n",
+      "Wall time: 2.62 s\n"
      ]
     }
    ],
@@ -896,16 +905,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "through-dublin",
+   "execution_count": 24,
+   "id": "67ea20c5",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 4018.35 MiB, increment: 346.03 MiB\n",
-      "Wall time: 17 s\n"
+      "peak memory: 5291.89 MiB, increment: 139.25 MiB\n",
+      "Wall time: 10.4 s\n"
      ]
     }
    ],
@@ -919,8 +928,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "dental-injury",
+   "execution_count": 25,
+   "id": "48f10fa7",
    "metadata": {},
    "outputs": [
     {
@@ -929,7 +938,7 @@
      "text": [
       "5.7G\tfigshareairline/combined_data.csv\n",
       "1.1G\tfigshareairline/combined_data.feather\n",
-      "542M\tfigshareairline/combined_data.parquet\n"
+      "1.6G\tfigshareairline/combined_data.parquet\n"
      ]
     }
    ],
@@ -945,7 +954,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ultimate-continent",
+   "id": "4cb095a2",
    "metadata": {},
    "source": [
     "### 2. Rationale for why we chose **parquet** file format to transfer dataframe from python to R:\n",
@@ -964,7 +973,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "governmental-certification",
+   "id": "41c74f33",
    "metadata": {},
    "source": [
     "### 3. Transfer data file to R using pacquet and conduct a simple R EDA"
@@ -972,10 +981,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "conscious-chile",
+   "execution_count": 26,
+   "id": "ba12fe79",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'figshareairline/combined_data.parquet\\\\153d907b145f4de88624770b9b94ad09.parquet'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "filepath = glob.glob('figshareairline/combined_data.parquet/*.parquet')[0]\n",
     "filepath"
@@ -983,10 +1003,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "disturbed-disco",
+   "execution_count": 27,
+   "id": "7fc3a3bf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "R[write to console]: \n",
+      "Attaching package: 'arrow'\n",
+      "\n",
+      "\n",
+      "R[write to console]: The following object is masked from 'package:utils':\n",
+      "\n",
+      "    timestamp\n",
+      "\n",
+      "\n",
+      "R[write to console]: \n",
+      "Attaching package: 'dplyr'\n",
+      "\n",
+      "\n",
+      "R[write to console]: The following objects are masked from 'package:stats':\n",
+      "\n",
+      "    filter, lag\n",
+      "\n",
+      "\n",
+      "R[write to console]: The following objects are masked from 'package:base':\n",
+      "\n",
+      "    intersect, setdiff, setequal, union\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "`summarise()` ungrouping output (override with `.groups` argument)\n",
+      "# A tibble: 27 x 2\n",
+      "   model            no_of_records\n",
+      "   <chr>                    <int>\n",
+      " 1 ACCESS-CM2             1932840\n",
+      " 2 ACCESS-ESM1-5          1610700\n",
+      " 3 AWI-ESM-1-1-LR          966420\n",
+      " 4 BCC-CSM2-MR            3035340\n",
+      " 5 BCC-ESM1                551880\n",
+      " 6 CanESM5                 551880\n",
+      " 7 CMCC-CM2-HR4           3541230\n",
+      " 8 CMCC-CM2-SR5           3541230\n",
+      " 9 CMCC-ESM2              3541230\n",
+      "10 EC-Earth3-Veg-LR       3037320\n",
+      "# ... with 17 more rows\n",
+      "Time difference of 1.673 secs\n",
+      "`summarise()` ungrouping output (override with `.groups` argument)\n",
+      "# A tibble: 27 x 2\n",
+      "   model            average_rainfall\n",
+      "   <chr>                       <dbl>\n",
+      " 1 ACCESS-CM2                   1.79\n",
+      " 2 ACCESS-ESM1-5                2.22\n",
+      " 3 AWI-ESM-1-1-LR               2.03\n",
+      " 4 BCC-CSM2-MR                  1.95\n",
+      " 5 BCC-ESM1                     1.81\n",
+      " 6 CanESM5                      1.89\n",
+      " 7 CMCC-CM2-HR4                 2.28\n",
+      " 8 CMCC-CM2-SR5                 2.38\n",
+      " 9 CMCC-ESM2                    2.27\n",
+      "10 EC-Earth3-Veg-LR             1.52\n",
+      "# ... with 17 more rows\n",
+      "Time difference of 2.422 secs\n",
+      "Wall time: 12.3 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "%%R -i filepath\n",
@@ -1025,7 +1114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "early-crown",
+   "id": "cf159b50",
    "metadata": {},
    "source": [
     "## Closing comments"
@@ -1033,7 +1122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "jewish-soldier",
+   "id": "2d712482",
    "metadata": {},
    "source": [
     "* Given the size of this data is quite large, the time it took us to run the code is quite long.\n",
@@ -1058,7 +1147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.2"
   },
   "toc-autonumbering": false
  },
